fix mockups alignment

--- a/css/layout.css
+++ b/css/layout.css
@@ -762,6 +762,7 @@ Perso salesfetch landing
 	height: 100%;
 	position: absolute;
 	top: 0;
+	left: 2px;
 }
 
 /* Chrome, Safari, Opera */
